--- a/config.env
+++ b/config.env
@@ -2,3 +2,8 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://codeine:<PASSWORD>@cluster0.b2gljws.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=landlords
+JWT_SECRET=youcannotguessmysecretkey
+EMAIL_USERNAME=7680b578af64db
+EMAIL_PASSWORD=8aa5db6ee2cb4c
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
